tests/syntax_error/call_missing_comma.jou
def foo() -> None:
    printf("hello %d\n" 1)  # Error: expected a ')', got an integer
